--- a/console/public/index.html
+++ b/console/public/index.html
@@ -12,6 +12,7 @@
             <ul id="log-files"></ul>
         </div>
         <div id="console">
+            <p class="downscroll">↓</p>
             <pre id="log-content">Выберите файл лога, чтобы увидеть его содержимое здесь...</pre>
         </div>
     </div>
